feat: start dev join section

--- a/src/components/ui/JoinToUs/JoinToUs.module.css
+++ b/src/components/ui/JoinToUs/JoinToUs.module.css
@@ -1,3 +1,6 @@
 .joinToUs{
     height: 436px;
+    width: 100%;
+    background-image: url("../../../../public/images/JoinToUS/background-coral.jpg");
+
 }
