--- a/src/components/CreateStory/_CreateStory.module.scss
+++ b/src/components/CreateStory/_CreateStory.module.scss
@@ -4,22 +4,23 @@
   font-family: $font-main;
   &__title {
     font-weight: 700;
-    font-size: 56px;
+    font-size: 32px;
     line-height: 110%;
     letter-spacing: -0.01em;
     color: #191919;
     font-family: $font-heading;
-    margin: 48px 0;
+    margin: 32px 0;
   }
   &__imagePreview {
-    width: 865px;
-    height: 576px;
+    width: 335px;
+    height: 223px;
+    object-fit: cover;
     border-radius: 16px;
   }
 
   &__button {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 150%;
     background-color: rgba(0, 0, 0, 0.05);
     border: 1px solid rgba(0, 0, 0, 0.15);
@@ -33,7 +34,7 @@
     flex-direction: column;
     gap: 8px;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 150%;
   }
 
@@ -58,43 +59,39 @@
   }
   &__inputWrapper {
     display: flex;
+    width: 100%;
 
     flex-direction: column;
     gap: 24px;
-    width: 865px;
   }
 
   &__buttonWrapper {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    width: 423px;
-    margin-top: 36px;
+    width: 100%;
   }
   &__submitButton {
-    padding: 10.5px 0;
+    padding: 12px 0;
   }
   &__form {
     display: flex;
+    flex-direction: column;
+    width: 335px;
     gap: 24px;
-    
   }
 }
 
 @media screen and (min-width: $breakpoint-tablet) {
   .createStories {
+    &__title {
+      font-size: 48px;
+    }
     &__imagePreview {
       width: 100%;
       height: 557px;
     }
-    &__inputWrapper {
-      width: 100%;
-    }
-    &__buttonWrapper {
-      width: 100%;
-    }
     &__form {
-      flex-direction: column;
       width: 704px;
     }
   }
@@ -102,6 +99,10 @@
 
 @media screen and (min-width: $breakpoint-desktop) {
   .createStories {
+    &__title {
+      margin: 48px 0;
+      font-size: 56px;
+    }
     &__imagePreview {
       width: 865px;
       height: 576px;
@@ -115,6 +116,18 @@
     &__form {
       flex-direction: row;
       width: auto;
+    }
+    &__inputGroup {
+      font-size: 18px;
+    }
+    &__button {
+      font-size: 18px;
+    }
+    &__submitButton {
+      padding: 10.5px 0;
+    }
+    &__buttonWrapper {
+      margin-top: 36px;
     }
   }
 }
