--- a/src/sections/project/_Project.module.scss
+++ b/src/sections/project/_Project.module.scss
@@ -50,7 +50,7 @@
         @media (min-width:$breakpoint-desktop) {
             display: flex;
             gap: 24px;
-            justify-content: center;
+            justify-content: start;
         }
     }
 
@@ -71,6 +71,7 @@
 
         @media (min-width:$breakpoint-desktop) {
             font-size: 20px;
+            max-width: 530px;
         }
     }
 
