--- a/src/components/CreateStoryForm/_CreateStoryForm.module.scss
+++ b/src/components/CreateStoryForm/_CreateStoryForm.module.scss
@@ -2,20 +2,14 @@
 
 .createStories {
   font-family: $font-main;
-  &__title {
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 110%;
-    letter-spacing: -0.01em;
-    color: #191919;
-    font-family: $font-heading;
-    margin: 32px 0;
-  }
+
   &__imagePreview {
     width: 335px;
     height: 223px;
     object-fit: cover;
     border-radius: 16px;
+    cursor: pointer;
+
   }
 
   &__button {
@@ -27,6 +21,8 @@
     border-radius: 8px;
     margin-top: 24px;
     padding: 4px 10px;
+    cursor: pointer;
+
   }
 
   &__inputGroup {
@@ -48,6 +44,7 @@
     width: 100%;
     height: 43px;
     color: $gray-500;
+
   }
   &__textarea {
     border: 1px solid rgba(0, 0, 0, 0.15);
@@ -56,6 +53,7 @@
     width: 100%;
     height: 180px;
     color: $gray-500;
+
   }
   &__inputWrapper {
     display: flex;
@@ -80,13 +78,32 @@
     width: 335px;
     gap: 24px;
   }
+
+  &__select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    background: #fff;
+    font-size: 16px;
+    padding-right: 48px;
+  }
+
+  &__errorText {
+    color: #b00101;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+  }
+
+  &__error {
+    border-color: #b00101;
+    color: #b00101;
+  }
 }
 
 @media screen and (min-width: $breakpoint-tablet) {
   .createStories {
-    &__title {
-      font-size: 48px;
-    }
     &__imagePreview {
       width: 100%;
       height: 557px;
@@ -99,10 +116,6 @@
 
 @media screen and (min-width: $breakpoint-desktop) {
   .createStories {
-    &__title {
-      margin: 48px 0;
-      font-size: 56px;
-    }
     &__imagePreview {
       width: 865px;
       height: 576px;
