--- a/src/styles/TravelerCard.scss
+++ b/src/styles/TravelerCard.scss
@@ -2,7 +2,7 @@
   background: #e8eaf6;
   border-radius: 16px;
   padding: 32px 24px;
-  text-align: center;
+  text-align: left;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 
   display: flex;
@@ -20,17 +20,17 @@
   height: 80px;
   border-radius: 50%;
   object-fit: cover;
-  margin: 60px 25px 10px ;
-  display: block;
+  margin: 0 0 12px;
   border: 3px solid #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .traveler-name {
   font-size: 1.1rem;
-  font-weight: 600;
+  font-weight: 700;
   color: #1d1d1f;
   margin-bottom: 12px;
+  
 }
 
 .traveler-description {
@@ -51,11 +51,10 @@
   transition: all 0.3s ease;
   font-weight: 500;
 
-  margin-top: auto; /* головне правило */
+  margin-top: auto;
   align-self: center;
 
   &:hover {
-    background: #1d1d1f;
-    color: #fff;
-  }
-}
+    background: #4169E1;
+    color: #ffffff
+  }}
