--- a/src/sections/project/_Project.module.scss
+++ b/src/sections/project/_Project.module.scss
@@ -105,16 +105,19 @@
     }
 
     &__svg {
+        width: 48px;
+        height: 48px;
+
         @media (min-width:$breakpoint-mobile) {
-            padding: 0 0 8px 0;
+            margin-bottom: 8px;
         }
 
         @media (min-width:$breakpoint-tablet) {
-            padding: 0 0 8px 0;
+            margin-bottom: 8px;
         }
 
         @media (min-width:$breakpoint-desktop) {
-            padding: 0 0 24px 0;
+            margin-bottom: 24px;
         }
     }
 
