--- a/src/sections/header/header.module.scss
+++ b/src/sections/header/header.module.scss
@@ -5,19 +5,19 @@
   top: 0;
   left: 0;
   width: 100%;
-  color: $gray-50;
   padding-top: 0;
   padding-bottom: 0;
-  background: transparent;
   z-index: 999;
   transition: all 0.35s ease;
   &--scrolled {
-    background: $gray-50;
     backdrop-filter: blur(8px);
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
     .header {
       &__logo {
         color: $gray-900;
+      }
+      &__user-block svg path {
+        fill: $gray-900;
       }
       &__burger svg path {
         fill: $gray-900;
@@ -57,6 +57,7 @@
       color: inherit;
     }
   }
+
   &__burger {
     background: rgba(255, 255, 255, 0.12);
     border: none;
@@ -114,44 +115,46 @@
       font-weight: 400;
     }
   }
-  &__user-name{
-    color: $gray-900;}
+  &__user-name {
+    color: $gray-900;
+  }
 
-    &__.user {
-  display: none;
-  height: 24px;
-  padding-top: 7px;
-}
+  &__.user {
+    display: none;
+    height: 24px;
+    padding-top: 7px;
+  }
 
-&__user-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-  padding: 6px 10px;
-  border-radius: 12px;
-  background: rgba(255, 255, 255, 0.7);
-}
+  &__user-menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 6px 10px;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.7);
+  }
 
-&__avatar {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  background: #ddd;
-}
-&__divider {
-  width: 1px;
-  height: 24px;
-  background: $gray-350;
-}
+  &__avatar {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background: #ddd;
+  }
+  &__divider {
+    width: 1px;
+    height: 24px;
+    background: $gray-350;
+  }
 
-&__logout-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-
+  &__logout-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    path {
+      fill: $gray-900;
+    }
+  }
 }
 
 // .publish-btn-header {
@@ -163,7 +166,6 @@
 //   justify-content: center;
 // }
 
-
 @media (min-width: $breakpoint-tablet) {
   .header {
     &__actions {
@@ -172,8 +174,8 @@
       gap: 12px;
     }
     &__burger {
-    display: inline-flex;
-  }
+      display: inline-flex;
+    }
   }
   // .publish-btn-header {
   //   display: flex;
@@ -182,7 +184,6 @@
   // .publish-btn-mobile {
   //   display: none;
   // }
-
 }
 
 @media (min-width: $breakpoint-desktop) {
@@ -197,12 +198,11 @@
       display: none;
     }
     &__user {
-    display: block;
-  }
+      display: block;
+    }
   }
 
   .publish-btn-header {
     display: flex;
   }
-
 }
