--- a/src/sections/PopularStories/_PopularStories.module.scss
+++ b/src/sections/PopularStories/_PopularStories.module.scss
@@ -16,5 +16,10 @@
     @media screen and (min-width: 1440px) {
       width: 163px;
     }
+        &:hover, &:focus{
+      color: $gray-900;
+      background-color: $blue-50;
+      border: 1px solid $blue-400;
+    }
   }
 }
