--- a/src/pages/stories/_Stories.module.scss
+++ b/src/pages/stories/_Stories.module.scss
@@ -1,6 +1,12 @@
 @use "@/styles/variables" as *;
 .stories-page {
   padding: 120px 0 72px;
+  &__title {
+    @media screen and (max-width: 767px) {
+      width: 240px;
+      margin: 0 auto 40px;
+    }
+  }
   &__button-container {
     display: flex;
     justify-content: space-between;
@@ -20,7 +26,9 @@
       font-size: 18px;
     }
   }
-  &__button[data-active="true"], &__button:hover, &__button:focus{
+  &__button[data-active="true"],
+  &__button:hover,
+  &__button:focus {
     border: 1px solid $gray-100;
     background-color: $gray-100;
     color: $gray-900;
@@ -36,19 +44,27 @@
   &__button--more {
     background-color: $blue-400;
     color: $gray-50;
-    width: 147px;
+    width: 335px;
     height: 48px;
     font-size: 16px;
     font-weight: 500;
     display: block;
     margin: 24px auto 0;
+      @media screen and (min-width: 768px) {
+      width: 147px;
+    }
     @media screen and (min-width: 1440px) {
       width: 163px;
     }
-    &:hover, &:focus{
+    &:hover,
+    &:focus {
       color: $gray-900;
       background-color: $blue-50;
       border: 1px solid $blue-400;
     }
+  }
+  &__dropdown{
+    margin-bottom: 40px;
+    margin-top: 8px;
   }
 }
