--- a/src/styles/AllTravelersPage.scss
+++ b/src/styles/AllTravelersPage.scss
@@ -1,8 +1,9 @@
 @use "@/styles/variables" as *;
 
 .all-travelers-page {
-  padding: 40px 20px;
+  padding: 112px 20px;
   min-height: 100vh;
+
 }
 
 .travelers-grid {
@@ -26,6 +27,7 @@
   font-weight: 600;
   cursor: pointer;
   transition: 0.3s;
+  margin-top: 48px;
 
   &:hover {
     background: $blue-400;
