--- a/src/pages/stories/_Stories.module.scss
+++ b/src/pages/stories/_Stories.module.scss
@@ -19,6 +19,8 @@
   &__button {
     border-radius: 8px;
     font-size: 16px;
+    background-color: transparent;
+    border: 0px;
     @media screen and (min-width: 768px) {
       font-weight: 500;
     }
