--- a/src/sections/historia/_historia.scss
+++ b/src/sections/historia/_historia.scss
@@ -1,3 +1,5 @@
+@use "@/styles/variables" as *;
+
 .historia {
   padding: 30px 20px;
 }
@@ -12,6 +14,7 @@
   line-height: 110%;
   letter-spacing: -0.01em;
   margin-bottom: 32px;
+  margin-top: 32px;
 }
 
 .historia-details {
@@ -19,6 +22,7 @@
   flex-direction: column;
   gap: 16px;
   align-items: flex-start;
+  margin-bottom: 16px;
 }
 
 .heading {
@@ -35,13 +39,10 @@
 }
 
 .continent-block {
-  width: 76px;
-  height: 26px;
   background: #e0e0e0;
   border-radius: 6px;
   text-align: center;
   padding: 4px 10px;
-
   &__name {
     font-weight: 600;
     font-size: 12px;
@@ -57,19 +58,94 @@
   margin-bottom: 64px;
 }
 
-
 .historia-description {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
   margin-bottom: 24px;
+  text-align: center;
 }
 
 .save-story {
-  background: #f5f5f5;
+  background: #f2f2f2;
   border-radius: 12px;
   padding: 32px 20px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+  max-width: 335px;
+
+  &__title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 140%;
+    letter-spacing: -0.01em;
+  }
+
+  &__description {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+  }
+
+  &__button {
+    border-radius: 8px;
+    padding: 6px 12px;
+    width: 295px;
+    height: 48px;
+    color: white;
+    background-color: #4169e1;
+  }
+}
+
+@media (min-width: 767px) {
+  .historia {
+    padding: 0 32px;
+  }
+
+  .historia-title {
+    font-size: 48px;
+  }
+
+  .historia-details {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 18px;
+    justify-content: space-between;
+  }
+  .historia-text {
+    display: flex;
+    gap: 48px;
+  }
+
+  .historia-image {
+    width: 704px;
+    height: 469px;
+  }
+
+  .save-story {
+    max-width: 418px;
+  }
+}
+
+@media (min-width: 1439px) {
+  .historia {
+    padding: 0 64px;
+  }
+  .historia-image {
+    width: 1312px;
+    height: 874px;
+    align-items: center;
+  }
+
+  .text-block {
+    display: flex;
+    gap: 24px;
+    justify-content: space-between;
+  }
+
+  .historia-title {
+    margin-top: 48px;
+  }
 }
